# gp-build-tool

./: .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  tests.yml
docs/: Configuration.md  README.md  Testing.md
docs/Features/: Graphviz Generation.md  Third Party Management.md  Three Phases Build.md
docs/Supports/: Compiler Support.md
examples/engine/: CMakeLists.txt
examples/engine/source/launch/editor/: CMakeLists.txt
examples/engine/source/launch/editor/private/: Private.cpp
examples/engine/source/runtime/core/: CMakeLists.txt
examples/engine/source/runtime/core/tests/: Tests.cpp
examples/engine/source/runtime/rhi/base/: CMakeLists.txt
examples/engine/source/runtime/rhi/d3d12/: CMakeLists.txt
examples/engine/source/runtime/rhi/d3d12/private/: Private.cpp
source/: gp-build-tool.cmake
source/gp-build-tool/: api.cmake  config.cmake  defaulter.cmake
source/gp-build-tool/compilers/: clang-cl.cmake  clang.cmake  default.cmake  gcc.cmake  msvc.cmake
source/gp-build-tool/linkers/: default.cmake  ld.cmake  ld64.cmake  lld.cmake  msvc-link.cmake
source/gp-build-tool/targets/: default.cmake  executable.cmake  module.cmake  plugin.cmake  shared.cmake
source/gp-build-tool/targets/api/: autoscan.cmake  build-tool.cmake  compile-definitions.cmake  compile-options.cmake  dependencies.cmake  link-options.cmake  metadata.cmake  options.cmake  sources.cmake
source/gp-build-tool/targets/utilities/: dump.cmake  graph.cmake  shared.cmake  (+3 more)
source/gp-build-tool/testing/: core.cmake  generate.cmake
source/gp-build-tool/tests/: all.cmake  asserts.cmake
source/gp-build-tool/utilities/: colors.cmake  logger.cmake  properties.cmake  strings.cmake
(+8 files in other folders)
