# Copyright (c) - Graphical Playground. All rights reserved.
# For more information, see https://graphical-playground/legal
# mailto:support AT graphical-playground DOT com

# TEMPORARY include by hand the cmake
add_subdirectory(source/launch/editor)
add_subdirectory(source/runtime/core)
add_subdirectory(source/runtime/rhi/base)
add_subdirectory(source/runtime/rhi/d3d12)
